Contact section was added

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -136,7 +136,7 @@ header {
     }
 }
 
-.experience, .service, .projects, .skills, .extra, .experience-two {
+.experience, .service, .projects, .skills, .extra, .contact {
     max-width: 1200px;
     display: grid;
     position: relative;
@@ -160,13 +160,6 @@ header {
     }
 }
 
-.experience-two {
-    padding: 0;
-    &::after { 
-        top: 0px;
-    }
-}
-
 .extra {
     width: 100%;
     display: flex;
@@ -175,7 +168,6 @@ header {
     position: relative;
     padding: 50px 0;
     gap: 30px;
-    height: 800px;
 
     .Me {
         width: 300px;
@@ -212,45 +204,6 @@ header {
             line-height: 1.5;
             max-width: 80ch;
             font-weight: 500;
-        }
-    }
-}
-
-.contact {
-    grid-template-columns: 1fr;
-    max-width: 900px;
-
-    & form {
-        width: 100%;
-        display: grid;
-        gap: 15px;
-    }
-
-    & input {
-        width: 100%;
-        background-color: var(--bg-white);
-        border: 1px solid var(--border-sm-white);
-        border-radius: 8px;
-        padding: 8px 15px;
-        color: var(--font-black);
-
-        &:focus {
-            outline: 2px solid var(--border-white);
-        }
-    }
-
-    & textarea {
-        width: 100%;
-        min-height: 200px;
-        max-height: 500px;
-        background-color: var(--bg-white);
-        border: 1px solid var(--border-sm-white);
-        border-radius: 8px;
-        padding: 8px 15px;
-        color: var(--font-black);
-
-        &:focus {
-            outline: 2px solid var(--border-white);
         }
     }
 }
