--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -63,8 +63,7 @@
     display: grid;
     place-items: center;
     padding: 1px;
-    background-color: var(--border-white);
-    border: 1px solid var(--border-mm-white);
+    background-color: var(--border-mm-white);
     border-radius: 8px;
 
     svg { 
@@ -218,11 +217,12 @@
         background-color: var(--bg-white);
         background-size: cover;
         filter: saturate(0);
+        position: relative;
 
         pre {
             width: 100%; 
             height: 400px; 
-            font-size: 14px; 
+            font-size: 10px; 
             line-height: 1.5; 
             padding: 20px; 
             border-radius: calc(var(--radius-card) + 5px);
@@ -232,9 +232,9 @@
             overflow: auto;
             font-family: "Source Code Pro", monospace;
             scrollbar-width: none;
-            font-weight: 500;
-            -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 30%, transparent 80%);
-            mask-image: linear-gradient(To bottom, var(--bg-white) 30%, transparent 80%);
+            font-weight: 600;
+            -webkit-mask-image: linear-gradient(-120deg, var(--bg-white) 0%, transparent 100%);
+            mask-image: linear-gradient(-120deg, var(--bg-white) 0%, transparent 100%);
 
             span {
                 font-weight: 500;
@@ -263,16 +263,11 @@
     gap: 5px;
     z-index: 100;
     
-    .smallMeImage {
-        width: 45px;
-        height: 45px;
+    img {
+        width: 50px;
+        height: 50px;
         border-radius: 10px;
         border: 1px solid var(--border-mm-white);
-        background-image: url('/Yo.png');
-        background-position-x: -28px;
-        background-position-y: -5px;
-        background-size: 100px;
-        background-repeat: no-repeat;
         backdrop-filter: blur(10px);
         background-color: rgba(0, 0, 0, 0.62);
     }
@@ -312,13 +307,14 @@
     place-items: center;
     gap: 5px;
     padding: 20px;
-    bottom: 30px;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
     background-color: #000000d3;
     backdrop-filter: blur(3px);
     border-radius: calc(var(--radius-card) + 5px);
-    border: 1px solid var(--border-mm-white);
-    background-image: url('/fflurry.svg');
-    background-size: 100px;
+    border: 1px dashed var(--font-black);
+    
 
     .title {
         text-align: center;
@@ -343,24 +339,40 @@
     gap: 8px;
     margin-top: 10px;
     
-    & svg {
-        width: 33px;
-        padding: 6px;
-        background-color: var(--bg-white);
-        outline: 1px solid var(--border-mm-white);
-        color: var(--font-black);
+    button {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px;
+        height: 35px;
+        background-color: var(--font-black);
+        border: none;
+        color: var(--bg-white);
         border-radius: 8px;
+        cursor: pointer;
+        font-weight: 500;
+
+        svg { width: 20px; color: var(--bg-white); }
+
+        &:hover {
+            background-color: var(--font-black);
+            border-color: var(--font-black);
+            background-image: url('/fflurryW.svg');
+            background-size: 100px;
+
+            svg { color: var(--bg-white); }
+        }
     }
     
     input {
         width: 300px;
-        border: none;
-        background-color: var(--border-sm-white);
+        background-color: var(--bg-white);
+        border: 1px solid var(--border-mm-white);
         font-weight: 500;
-        padding: 8px 10px;
+        height: 35px;
+        padding: 0 10px;
         color: var(--font-black);
         text-overflow: ellipsis;
-        outline: none;
         font-size: 14px;
         border-radius: 8px;
     }
