--- a/src/css/general.css
+++ b/src/css/general.css
@@ -45,15 +45,18 @@
     scrollbar-color: var(--bg-mm-white) #050505 !important;
     font-family: 'Chakra Petch';
     scroll-behavior: smooth;
+    scrollbar-width: none !important;
 }
 
 body {
     background-color: var(--bg-white);
     overflow-x: hidden;
-    scrollbar-gutter: stable !important;
 }
 
-.container-home { padding: 10px 20px; overflow: hidden; }
+.container-home { 
+    padding: 10px 20px; 
+    overflow: hidden;
+}
 
 p { line-height: 24px; }
 
@@ -71,7 +74,7 @@ p { line-height: 24px; }
     margin-top: 20px;
 
     .link {
-        padding: 10px 20px;
+        padding: 8px 15px;
         border-radius: var(--radius-card);
         background-color: var(--border-white);
         color: var(--font-black);
@@ -82,12 +85,19 @@ p { line-height: 24px; }
         cursor: pointer;
         border: none;
 
+        &:nth-child(2) {
+            background-color: var(--font-black);
+            color: var(--bg-white);
+        }
+
         & svg { width: 22px; }
 
         &:hover {
             background-color: var(--font-black);
             color: var(--bg-white);
             border-color: var(--font-black);
+            background-image: url('/fflurryW.svg');
+            background-size: 100px;
         }
     }
 }
