--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -6,8 +6,8 @@
     height: 100vh;
     display: none;
     place-items: center;
-    backdrop-filter: blur(5px);
-    z-index: 1000;
+    backdrop-filter: brightness(0.2);
+    z-index: 100;
 
     & .card-modal {
         position: relative;
