--- a/src/css/home.css
+++ b/src/css/home.css
@@ -37,7 +37,12 @@ nav {
             font-weight: 500;
             background-color: var(--border-white);
             
-            & svg { color: var(--font-black); width: 19px; }
+            & svg { color: inherit; width: 19px; }
+
+            &:hover {
+                background-color: var(--border-mm-white);
+                color: var(--font-black);
+            }
         }
     }
     
@@ -58,21 +63,29 @@ nav {
             color: var(--font-black);
             padding: 0 5px;
             background-color: transparent;
+
+            &:hover {
+                background-color: var(--bg-white);
+                color: var(--font-black);
+                background-image: none;
+            }
         }
     }
 }
 
-header {
+.about {
     width: 100%;
     max-width: 1400px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+    display: flex !important;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
-    border-radius: 20px;
-    min-height: 600px;
+    flex-direction: column !important;
+    gap: 0 !important;
+    margin-bottom: 50px !important;
+    padding: 40px !important;
+
+    .grid { margin-top: 50px; }
 
     .Me {
         width: 450px;
@@ -136,7 +149,7 @@ header {
     }
 }
 
-.experience, .service, .projects, .skills, .extra, .contact {
+.about, .experience, .service, .projects, .skills, .extra, .contact {
     max-width: 1200px;
     display: grid;
     position: relative;
@@ -160,22 +173,28 @@ header {
     }
 }
 
+.about::before { display: none; }
+.contact { padding-bottom: 0; }
+
 .extra {
     width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    padding: 50px 0;
-    gap: 30px;
-
+    justify-content: center;
+    border-radius: 20px;
+    
     .Me {
         width: 300px;
         filter: saturate(0);
         -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 60%, transparent 80%);
         mask-image: linear-gradient(To bottom, var(--bg-white) 60%, transparent 80%);
     }
-
+    
+    .grid {  margin-top: 40px; }
+    
     .cont-text {
         display: grid;
         place-items: center;
